# api/v2.0/swagger.yaml
@@ -1684,7 +1684,7 @@ paths:
           description: The JSON object of a robot account.
           required: true
           schema:
-            $ref: '#/definitions/RobotCreate'
+            $ref: '#/definitions/Robot'
       responses:
         '200':
           $ref: '#/responses/200'
@@ -1698,6 +1698,34 @@ paths:
           $ref: '#/responses/404'
         '409':
           $ref: '#/responses/409'
+        '500':
+          $ref: '#/responses/500'
+    patch:
+      summary: Refresh the robot secret
+      description: Refresh the robot secret
+      tags:
+        - robot
+      operationId: RefreshSec
+      parameters:
+        - $ref: '#/parameters/requestId'
+        - $ref: '#/parameters/robotId'
+        - name: robot
+          description: The JSON object of a robot account.
+          in: body
+          required: true
+          schema:
+            $ref: '#/definitions/Robot'
+      responses:
+        '200':
+          $ref: '#/responses/200'
+        '400':
+          $ref: '#/responses/400'
+        '401':
+          $ref: '#/responses/401'
+        '404':
+          $ref: '#/responses/404'
+        '403':
+          $ref: '#/responses/403'
         '500':
           $ref: '#/responses/500'
     delete:
@@ -3015,6 +3043,14 @@ definitions:
       level:
         type: string
         description: The level of the robot, project or system
+      duration:
+        type: integer
+        format: int64
+        description: The duration of the robot in days
+      editable:
+        type: boolean
+        x-omitempty: false
+        description: The editable status of the robot
       disable:
         type: boolean
         x-omitempty: false
@@ -3054,10 +3090,10 @@ definitions:
       disable:
         type: boolean
         description: The disable status of the robot
-      expires_at:
+      duration:
         type: integer
         format: int64
-        description: The expiration data of the robot
+        description: The duration of the robot in days
       permissions:
         type: array
         items:
@@ -3080,6 +3116,10 @@ definitions:
         type: string
         format: date-time
         description: The creation time of the robot.
+      expires_at:
+        type: integer
+        format: int64
+        description: The expiration data of the robot
   Permission:
     type: object
     properties:
