# src/server/v2.0/handler/model/robot.go
@@ -27,8 +27,10 @@ func (r *Robot) ToSwagger() *models.Robot {
 		Description:  r.Description,
 		Secret:       r.Secret,
 		ExpiresAt:    r.ExpiresAt,
+		Duration:     r.Duration,
 		Level:        r.Level,
 		Disable:      r.Disabled,
+		Editable:     r.Editable,
 		CreationTime: strfmt.DateTime(r.CreationTime),
 		UpdateTime:   strfmt.DateTime(r.UpdateTime),
 		Permissions:  perms,
